# internal/api/gen/oas_handlers_gen.go
@@ -12918,6 +12918,10 @@ func (s *Server) handleListFilesRequest(args [0]string, argsEscaped bool, w http
 					In:   "query",
 				}: params.Limit,
 				{
+					Name: "scope",
+					In:   "query",
+				}: params.Scope,
+				{
 					Name: "parentId",
 					In:   "query",
 				}: params.ParentId,
